--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,11 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@import url(../src/vendor/normalize.css);
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+@import url(../src/vendor/fonts/inter.css);
+
+@import url(./blocks/main.css);
+@import url(./blocks/booking.css);
+@import url(./blocks/footer.css);
+@import url(./blocks/living.css);
+@import url(./blocks/menu.css);
+@import url(./blocks/teacher.css);
+@import url(./blocks/timetable.css);
