--- a/src/blocks/main.css
+++ b/src/blocks/main.css
@@ -48,6 +48,14 @@
     font-size: 1.5em;
     line-height: 1.8em;
     margin-top: 4.5em;
+
+}.third_text {
+    font-weight: bold;
+    font-size: 2.5em;
+    line-height: 1.8em;
+    margin-left: 2em;
+    margin-top: 1.5em;
+
 }
 
 .text_span {
@@ -99,6 +107,10 @@
         margin-top: 5.8em;
         font-size: 1.5em;
     }
+    .third_text {
+        margin-top: 2.8em;
+        font-size: 2.5em;
+    }
 
     .text_span {
         font-size: 1.8em;
@@ -133,13 +145,17 @@
         margin-top: 4em;
         font-size: 2em;
     }
+    .third_text {
+        margin-top: 0;
+        font-size: 2em;
+    }
 
     .text_span {
         font-size: 1.2em;
     }
 
     .additional_text, .main_buttons {
-        bottom: 9em; /* Less padding for smaller screens */
+        bottom: 6em; /* Less padding for smaller screens */
     }
 
     .button_main {
@@ -157,7 +173,7 @@
 
     .main_text {
         max-width: 95%;
-        top: 10%;
+        top: 5%;
     }
 
     .first_text {
@@ -165,7 +181,12 @@
     }
 
     .second_text {
-        font-size: 0.9em;
+        font-size: 1.2em;
+    }
+    .third_text {
+        margin-top: 2em;
+        margin-left: 1em;
+        font-size: 1.6em;
     }
 
     .text_span {
@@ -173,13 +194,13 @@
     }
 
     .additional_text {
-        bottom: 0.5em;
+        bottom: 6em;
         left: 1em;
-        font-size: 0.8em;
+        font-size: 1em;
     }
 
     .main_buttons {
-        bottom: 0.5em;
+        bottom: 4.5em;
         right: 1em;
     }
 
