--- a/src/blocks/teacher.css
+++ b/src/blocks/teacher.css
@@ -63,3 +63,9 @@ blockquote:before {
     left: -0.5em;
     top: -0.2em;
 }
+
+@media screen and (max-width: 480px) {
+    .coordinator_image {
+        max-width: 98px;
+    }
+}
