Add new January/February program

--- a/src/blocks/living.css
+++ b/src/blocks/living.css
@@ -55,6 +55,10 @@
     font-weight: bold;
 }
 
+.price_sold {
+    color: red;
+}
+
 .additional_images {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
