--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
 html {
     scroll-behavior: smooth;
 }
+
+.App-header {
+    font-family: 'Inter', sans-serif;
+    background-color: #86c8c4;
+    color: #333;
+    text-align: center;
+}
