--- a/src/blocks/main.css
+++ b/src/blocks/main.css
@@ -39,9 +39,17 @@
 }
 
 .first_text {
+    display: flex;
+    flex-direction: row;
+    gap: 3em;
     font-size: 6em; /* Larger text */
     font-weight: bold;
     line-height: 1.1;
+}
+
+.info_text {
+    font-size: 0.7em;
+    color: yellow;
 }
 
 .second_text {
@@ -139,6 +147,7 @@
 
     .first_text {
         font-size: 6em;
+        gap: 0.1em;
     }
 
     .second_text {
@@ -178,6 +187,11 @@
 
     .first_text {
         font-size: 2.5em;
+        gap: 1em;
+    }
+
+    .info_text {
+        font-size: 0.8em;
     }
 
     .second_text {
