--- a/src/blocks/timetable.css
+++ b/src/blocks/timetable.css
@@ -6,6 +6,11 @@
 .page_title {
     font-size: 2.5em;
     text-align: center;
+    margin-bottom: 0.5em;
+}
+
+.page_addition {
+    text-align: center;
     margin-bottom: 1.5em;
 }
 
