--- a/src/blocks/main.css
+++ b/src/blocks/main.css
@@ -30,7 +30,7 @@
 .main_text {
     color: white;
     z-index: 2;
-    max-width: 50%; /* Adjust for text width */
+    max-width: 100%; /* Adjust for text width */
 }
 
 .main_text, .additional_text, .main_buttons {
@@ -48,8 +48,9 @@
 }
 
 .info_text {
-    font-size: 0.7em;
+    font-size: 0.5em;
     color: yellow;
+    width: fit-content;
 }
 
 .second_text {
@@ -108,7 +109,7 @@
 
     .first_text {
         font-size: 4em;
-        max-width: 50%/* Adjust text size */
+        max-width: 90%/* Adjust text size */
     }
 
     .second_text {
@@ -159,6 +160,10 @@
         font-size: 2em;
     }
 
+    .info_text {
+        font-size: 0.3em;
+    }
+
     .text_span {
         font-size: 1.2em;
     }
@@ -191,11 +196,12 @@
     }
 
     .info_text {
-        font-size: 0.8em;
+        font-size: 0.3em;
     }
 
     .second_text {
         font-size: 1.2em;
+        font-weight: bold;
     }
     .third_text {
         margin-top: 2em;
