--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,5 @@
 @import url(./blocks/menu.css);
 @import url(./blocks/teacher.css);
 @import url(./blocks/timetable.css);
+@import url(./blocks/reviews.css);
+@import url(./blocks/prev.css);
